<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:text="@string/description_configure_governor"
        android:textAppearance="@style/standard" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:layout_margin="15dp"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_min_sample_time"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_min_sample_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_hi_speed_freq"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <Spinner
                android:id="@+id/interactive_hi_speed_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/standard"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_go_hi_speed_load"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_go_hi_speed_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_above_hi_speed_delay"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_above_hi_speed_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_timer_rate"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_timer_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_timer_slack"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_timer_slack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_boost"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <Switch
                android:id="@+id/interactive_boost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textAppearance="@style/standard"
                android:textOff="@string/value_off"
                android:textOn="@string/value_on"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="15dp"
                android:enabled="true"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/interactive_boost_pulse_duration"
                android:textAppearance="@style/standard"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/interactive_boost_pulse_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:inputType="numberSigned"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>